# sourceengine-packetentities-rce-poc

./: README.md  out.bsp
map_leak/: Pipfile  __main__.py
map_leak/templates/: cp_cloak.bsp
se-extend-src/: CMakeLists.txt  se-extend.cpp
src/: Pipfile  __main__.py  _agent.js  package-lock.json  package.json
src/agent/: index.ts  infoleak.ts
src/agent/source_engine/: extend.ts  hackerone.ts  iface.ts  index.ts  util.ts  vtable.ts
src/agent/source_engine/classes/: IBaseFileSystem.ts  bf_write.ts  cgameclient.ts  cnetchan.ts  index.ts  wrappedobject.ts
